# t-left-2

./: .gitignore  Dockerfile  README.md
docs/: DEMO-SCRIPT.md  DEPLOY-LOG.md  FEEDBACK.md  TECHNICAL.md
keeper/: package-lock.json  package.json  railway-start.sh  seeded-markets.json  tsconfig.json
keeper/src/: capture-golden.ts  config.ts  demo-stake.ts  probe-fixture.ts  probe-history.ts  qed.ts  seed-markets.ts  setup.ts  txline.ts  verify-golden.ts  watch-settle.ts
keeper/tests/: e2e.test.ts
program/: Anchor.toml  Cargo.toml
program/idl/: qed_markets.json  qed_markets.ts
program/programs/qed-markets/: Cargo.toml
program/programs/qed-markets/src/: errors.rs  lib.rs  state.rs  strategy.rs  txoracle.rs
tests/golden/: bundle-1-2-7-8.json  bundle-1-2.json  bundle-3-4.json  bundle-dup-1-2-1.json  fixture.json  roots-account.json
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/markets/: route.ts
web/app/api/proof/: route.ts
web/app/api/replay/[fixtureId]/: route.ts
web/app/api/verify/: route.ts
web/app/market/[address]/: page.tsx
web/app/replay/[fixtureId]/: page.tsx
web/app/verify/: page.tsx
web/components/: ProofReceipt.tsx
web/lib/: chain.ts  config.ts  oracle.ts  proof.ts  seeded-markets.json  txline.ts
