[package]
name = "qed-markets"
version = "0.1.0"
description = "QED Markets — trustless multi-leg prediction markets settled by TxLINE validate_stat_v2 CPI"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "qed_markets"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
